fixed alignment issues in the top card (white)

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,6 @@ main {
   display: flex;
   flex-flow: column wrap;
   background-color: white;
-  text-align: center;
   border-bottom: 7px solid #ffd034;
   border-top: 7px solid #ffd034;
 }
